--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@formspree/react": "^3.0.0",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/themes": "^3.2.1",
     "class-variance-authority": "^0.7.1",
